--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.11.0",
     "webpack-cli": "^3.0.2"
   },
