--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "eslint": "^5.4.0",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.0",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
     "exports-loader": "^0.7.0",
     "extract-loader": "^2.0.1",
@@ -26,13 +26,15 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.3",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.5"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
@@ -40,7 +42,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "node-waves": "^0.7.6",
-    "popper.js": "^1.14.4",
-    "tiny-slider": "^2.8.1"
+    "popper.js": "^1.14.6",
+    "tiny-slider": "^2.9.0"
   }
 }
